# ddns-updater

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  config.sample.toml
.github/workflows/: ci.yml  release.yml
src/: config.rs  dns.rs  iface.rs  ip.rs  main.rs
