[package]
name = "ddns-updater"
description = "A simple RFC 2136 dynamic DNS updater"
repository = "https://github.com/chenxiaolong/ddns-updater"
readme = "README.md"
license = "GPL-3.0"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
gethostname = "0.4.3"
log = "0.4.19"
netif = "0.1.6"
rand = "0.8.5"
thiserror = "1.0.41"
toml = "0.8.2"

[dependencies.clap]
version = "4.3.10"
features = ["derive"]

[dependencies.serde]
version = "1.0.166"
features = ["derive"]

[dependencies.serde_with]
version = "3.0.0"
features = ["base64", "macros"]

[dependencies.hickory-client]
version = "0.24.0"
features = ["dnssec", "dnssec-ring"]
