[package]
name = "ddns-updater"
description = "A simple RFC 2136 dynamic DNS updater"
repository = "https://github.com/chenxiaolong/ddns-updater"
readme = "README.md"
license = "GPL-3.0"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.3.10", features = ["derive"] }
futures-util = "0.3.31"
gethostname = "1.0.0"
hickory-client = { version = "0.25.1", features = ["dnssec-ring"] }
netif = "0.1.6"
rand = "0.9.0"
serde = { version = "1.0.166", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["base64", "macros"] }
thiserror = "2.0.11"
tokio = "1.44.1"
toml = "0.8.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
